# zsgf-rust

./: Cargo.toml  README.md
docs/: AccessTokenApi.md  AccessTokenListResult.md  AccessTokenListResultApiResponse.md  AccessTokenPostRequest.md  AccessTokenPutRequest.md  AlipayApi.md  AlipayCreateOrderPagePayRequest.md  AlipayCreateOrderRequest.md  AlipayCreateOrderWapPayRequest.md  AlipayTradeQueryResponse.md  AlipayTradeQueryResponseApiResponse.md  AlipayTradeRefundResponse.md  AlipayTradeRefundResponseApiResponse.md  App.md  AppApi.md  AppApiResponse.md  AppCheckVersionResult.md  AppCheckVersionResultApiResponse.md  AppInfoItem.md  AppInfoResult.md  AppInfoResultApiResponse.md  AppListResult.md  AppListResultApiResponse.md  AppPostResult.md  AppPostResultApiResponse.md  AppProperty.md  AppSetting.md  AppSettingApi.md  AppSettingApiResponse.md  AppSettingGroupPostResult.md  AppSettingGroupPostResultApiResponse.md  AppSettingItemPostResult.md  AppSettingItemPostResultApiResponse.md  AppSettingListApiResponse.md  AppSettingProviderPostResult.md  AppSettingProviderPostResultApiResponse.md  AppSettingSettingPostResult.md  AppSettingSettingPostResultApiResponse.md  AppUserConsentModel.md  AppUserConsentModelListApiResponse.md  (+192 more)
src/apis/: access_token_api.rs  alipay_api.rs  app_api.rs  app_setting_api.rs  authorize_policy_api.rs  configuration.rs  currency_api.rs  ding_talk_api.rs  external_account_api.rs  file_api.rs  mod.rs  o_auth_api.rs  order_api.rs  project_api.rs  service_setting_api.rs  storage_api.rs  system_file_api.rs  team_api.rs  user_api.rs  user_currency_api.rs  (+4 more)
(+211 files in other folders)
